Added automatic markdown render